Implementing SCRUM 39 - Generate invoice with line items